<resources>
    <string name="app_name">RunUnlock</string>
    <string name="welcome">Benvenuto su RunUnlock</string>
    <string name="change_text">Login</string>
    <string name="change_text_hint">Inserisci Testo</string>
    <string name="insert_name">Nome</string>
    <string name="insert_last_name">Cognome</string>
    <string name="title_activity_2">RunUnlock</string>
    <string name="codice_fiscale">Codice Fiscale</string>
    <string name="abbonamento_atac">Abbonamento ATAC</string>
    <string name="email">E-Mail</string>
    <string name="telefono">Cell</string>
    <string name="exit">Exit</string>
    <string name="title_activity_3">RunUnlock</string>
    <string name="hint_info">La nostra app è basata su una bla bla bla...</string>
    <string name="hint_setting">work in progress</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_cf">Codice Fiscale</string>
    <string name="hint_data_nascita">Data di Nascita</string>
    <string name="hint_abbonamento">Abbonamento ATAC</string>
    <string name="hint_telefono">Cellulare</string>


</resources>
