<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_blue"
    tools:context="android.vm.rununlock.MainActivity"
    android:weightSum="1">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorGreen"
        android:id="@+id/name_Tv"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorBlack"
        android:id="@+id/name_Tv_Error"
        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/codice_fiscale"
        android:gravity="center"
        android:inputType="text"
        android:id="@+id/editCF"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="date"
        android:hint="@string/hint_data_nascita"
        android:gravity="center"
        android:id="@+id/editDataNascita"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="numberDecimal"
        android:hint="@string/abbonamento_atac"
        android:gravity="center"
        android:id="@+id/abbonamento"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/telefono"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/editText" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="Richiedi"
        android:id="@+id/button_send"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        />

    <Button
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:text="Resetta i campi"
        android:id="@+id/button_reset"
        style="@android:style/Widget.DeviceDefault.Button.Inset"/>


    <Switch
        android:text="Attiva il servizio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textColor="@color/colorBlack"
        style="style=@android:style/Widget.DeviceDefault.Button.Inset"
        android:id="@+id/switch1" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>

