<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_blue"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.vm.rununlock.MainActivity"
    android:weightSum="1"
    android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/welcome_tv"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:gravity="center"
        />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    </RelativeLayout>


            <EditText
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/username"
                android:gravity="center"
                android:inputType="textCapSentences"
                android:id="@+id/editUsername"
                android:hint="Usename"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"


                style="@android:style/Widget.Material.Light.AutoCompleteTextView"
                />



            <EditText
                android:background="@drawable/username"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:inputType="textPassword"
                android:imeOptions="actionGo"
                android:id="@+id/editPassword"
                android:hint="Password"
                android:textColorHint="@color/colorWhite"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.design.widget.TextInputLayout>

            <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_text"
        android:id="@+id/change_text_btn"
        android:layout_weight="0.03"
        android:layout_marginTop="50dp"
                style="@android:style/Widget.DeviceDefault.Button.Inset" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exit_text_btn"
                style="@android:style/Widget.DeviceDefault.Button.Inset"
        />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Clicca qui per registrarti"
                android:onClick="handleOnClick"
                android:clickable="true"
                android:textColor="@color/colorWhite"
                android:id="@+id/registratiTextView"


                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
